<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title">Reboot</string>
	<string name="reboot">Reboot</string>
	<string name="soft_reboot">Soft Reboot</string>
	<string name="reboot_recovery">Reboot to Recovery</string>
	<string name="reboot_bootloader">Reboot to Bootloader</string>
	<string name="reboot_download">Reboot to download mode</string>
	<string name="power_off">Power Off</string>
	<string name="cancel">Cancel</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_changelog">Changelog</string>
	<string name="menu_close">Close</string>
	<string name="message_no_root">You don\'t have root access.</string>
	<string name="message_confirm_reboot">Are you sure you want to reboot?</string>
	<string name="message_confirm_soft_reboot">Are you sure you want to perform a soft reboot?</string>
	<string name="message_confirm_reboot_recovery">Are you sure you want to reboot to recovery?</string>
	<string name="message_confirm_reboot_bootloader">Are you sure you want to reboot to bootloader?</string>
	<string name="message_confirm_reboot_download">Are you sure you want to reboot to download mode?</string>
	<string name="message_confirm_power_off">Are you sure you want to power off?</string>
    <string name="message_confirm_old_app_removal">An old version of this app was found on the device. Do you want to remove it and reboot? You can disable this message from the settings, if you want to keep both. Note that the device will reboot to complete the process.</string>
	<string name="message_please_wait">Please wait ...</string>
	<string name="pref_confirm_actions">Ask for confirmation</string>
	<string name="pref_summary_confirm_actions">Show a confirmation dialog before rebooting or powering off</string>
	<string name="pref_reboot_button">Reboot button</string>
	<string name="pref_reboot_button_summary">Show or hide \"Reboot\" button</string>
	<string name="pref_soft_reboot_button">Soft reboot button</string>
	<string name="pref_soft_reboot_button_summary">Show or hide \"Soft reboot\" button</string>
	<string name="pref_reboot_recovery_button">Reboot to recovery button</string>
	<string name="pref_reboot_recovery_button_summary">Show or hide \"Reboot to recovery\" button</string>
	<string name="pref_reboot_bootloader_button">Reboot to bootloader button</string>
	<string name="pref_reboot_bootloader_button_summary">Show or hide \"Reboot to bootloader\" button</string>
	<string name="pref_reboot_download_button">Reboot to download mode button</string>
	<string name="pref_reboot_download_button_summary">Show or hide \"Reboot to download mode\" button</string>
	<string name="pref_power_off_button">Power off button</string>
	<string name="pref_power_off_button_summary">Show or hide \"Power off\" button</string>
	<string name="pref_stop_wifi">Stop wifi before rebooting</string>
	<string name="pref_summary_stop_wifi">WARNING : Selecting \"no\" on iMito QX1 is likely to cause a bootloop. Use at your own risk!</string>
	<string name="pref_flash_misc">Use \"misc image\" trick to reboot to recovery</string>
	<string name="pref_summary_flash_misc">On many rockchip and allwinner devices, some text has to be written to the \"misc\" partition to reboot to recovery. Try to force it to \"yes\" if you can\'t reboot to recovery.</string>
	<string name="pref_remount_everything_ro">Try to remount FileSystem read-only before rebooting</string>
	<string name="pref_summary_remount_everything_ro">Enabling this option can prevent FileSystem corruption, but can freeze the system.</string>
    <string name="pref_check_old_app">Check for an old version of the application, and offer to remove it</string>
    <string name="pref_summary_check_old_app">If you don\'t remove the old version of the reboot application (before 1.4.0), you will have both on your device, so this new version can remove the old one.</string>
    <string name="pref_execute_in_main_thread">Execute root commands in main thread</string>
    <string name="pref_summary_execute_in_main_thread">Disabled by default for better responsiveness. Try to check this option if you have problems.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="exit">Exit</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="autodetect">Autodetect</string>
</resources>